Segundo commit. Navegacion y navegacion R

--- a/css/style.css
+++ b/css/style.css
@@ -34,5 +34,13 @@ ul{
     padding: 20px 0px;
 }
 .nav-logo{
+    margin: auto;
     width: 150px;
+}
+/*Nav-r*/
+.nav-main ul {
+    display: flex;
+}
+.nav-main ul li {
+    padding: 10px;
 }
