--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,20 @@ ul{
 }
 .nav-logo{
     margin: auto;
-    width: 150px;
+    padding: 10px;
+    width: 250px;
 }
-/*Nav-r*/
+/*Nav-L*/
 .nav-main ul {
     display: flex;
 }
 .nav-main ul li {
     padding: 10px;
+}
+.nav-main ul li a:hover{
+    border-bottom: 2px solid #ffffff;
+}
+.nav-main ul.nav-menu{
+    flex: 1;
+    margin-left: 20px;
 }
