--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *{
-    box-sizing: border-box; 
+    box-sizing: 0; 
     margin: 0;
     padding: 0;
 }
@@ -12,7 +12,8 @@ body{
     font-size: 16px;
     font-family: 'Piazzolla', serif;
     font-family: 'Roboto', sans-serif;
-    
+    font-family: sans-serif;
+    margin: 0 auto;
 }
 a{
     color: #ffffff;
@@ -36,7 +37,7 @@ ul{
 .nav-logo{
     margin: auto;
     padding: 10px;
-    width: 250px;
+    width: 90px;
 }
 /*Nav-L*/
 .nav-main ul {
@@ -52,3 +53,9 @@ ul{
     flex: 1;
     margin-left: 20px;
 }
+
+.slider img {
+    width: 100%;
+    max-width: 1080px;
+    margin: 0 auto;
+  }
