--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
     color: #ffffff;
     background-color: #DFDBE5;
     background-color: #000000;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%2319c4ff' fill-opacity='0.4'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-image: url(/img/bg.png);
     font-size: 16px;
     font-family: 'Piazzolla', serif;
     font-family: 'Roboto', sans-serif;
@@ -22,40 +22,3 @@ a{
 ul{
     list-style: none;
 }
-.container{
-    margin: auto;
-}
-/*Navegacion*/
-.nav-main{
-    font-size: 17px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
-    padding: 20px 0px;
-}
-.nav-logo{
-    margin: auto;
-    padding: 10px;
-    width: 90px;
-}
-/*Nav-L*/
-.nav-main ul {
-    display: flex;
-}
-.nav-main ul li {
-    padding: 10px;
-}
-.nav-main ul li a:hover{
-    border-bottom: 2px solid #ffffff;
-}
-.nav-main ul.nav-menu{
-    flex: 1;
-    margin-left: 20px;
-}
-
-.slider img {
-    width: 100%;
-    max-width: 1080px;
-    margin: 0 auto;
-  }
