--- a/css/slider.css
+++ b/css/slider.css
@@ -3,9 +3,6 @@
     margin: auto;
     overflow: hidden;
     padding-bottom: 5px;
-    position: relative;
-    left: calc(50% + 50px);
-
 }
 
 .slider ul{
@@ -13,9 +10,7 @@
     padding: 0;
     width: 400%;
     height: 1;
-    animation: shift 30s infinite alternate;
-    animation-timing-function: linear;
-    justify-content: center;
+    animation-timing-function: ease-in-out;
 }
 
 .slider li{
@@ -23,22 +18,11 @@
     list-style: none;
 }
 
-.slider img{
-    margin: auto;
-    width: 70%;
+.slider img {
+    width: 100%;
     border: black 5px solid;
-}
+    max-height: fit-content;
+    max-width: fit-content;
+    margin: 0 auto;
+  }
 
-@keyframes shift{
-    0%{margin-left: 0;}
-    20%{margin-left: 0;}
-
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-}
